fixed and done with mission dark mode

--- a/mission/styles.css
+++ b/mission/styles.css
@@ -47,7 +47,7 @@ main p {
     text-align: left;
 }
 
-footer .byuiLogo {
+footer .logo {
     display: block;
     margin: 20px auto;
     margin-top: 65px;
